crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.assign-ref-in-effect-hint/error.txt
Found 1 error:

Error: This value cannot be modified

Modifying component props or hook arguments is not allowed. Consider using a local variable instead.

error.assign-ref-in-effect-hint.ts:5:4
  3 | function Component({foo}) {
  4 |   useEffect(() => {
> 5 |     foo.current = true;
    |     ^^^ `foo` cannot be modified
  6 |   }, [foo]);
  7 | }
  8 |

Hint: If this value is a Ref (value returned by `useRef()`), rename the variable to end in "Ref".
